# minitel

./: .gitignore  3615-gpt-curses.py  3615-gpt.py  Minitel.py  README.md  clear.py  dashboard.py  max-test.py  pyproject.toml  requirements-frozen.txt  requirements-orig.txt  requirements.txt  test-emunitel.py
docs/: index.en.md  index.md
docs/minitalk/: index.md
emunitel/: LegacyComputing2.sfd  Minitel.py
minitalk/: README.md  sprite.py
ncurses/: 3615-gpt-curses.py  client.py  iso-8859-1.txt  pyproject.toml  server.py
server/: README.md  pyproject.toml  requirements-frozen.txt  requirements-orig.txt  requirements.txt  server.py
server/static/: main.css  main.js  package-lock.json
