[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Max Froumentin <github@e97.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
flask-sock = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
